4.5 -> 5.0:
    - rse: provide "install-sh" script in %{_rpmhome} as a companion to "mkinstalldirs"
    - rse: fix %{__mkdir_p} macro fallback value by installing missing "mkinstalldirs" into %{_rpmhome}
    - rse: consistently use %{__mkdir_p} macro instead of its pre-defined value @MKDIR_P@ to allow overriding
    - mgh: Update configure.ac to use target instead of host values for configuration
    - rse: fix build environment to correctly support building RPM from outside its source tree
    - rse: remove RH-specific "_vsflags_up2date" macro, use "_vsflags" in Python bindings instead
    - rse: make --with-path-rpmpopt a colon-separated path to allow "rpmpopt" files be similar to "macros" files
    - rse: allow the path to the RPM package sources be overridden via Autoconf option --with-path-sources
    - rse: allow the path to the RPM database directory be overridden via Autoconf option --with-path-database
    - rse: drop support for internal lua/ at all to make piece with Automake (as lua/ build-env was not stand-alone)
    - jbj: no longer ship an internal copy of Lua with the RPM distribution
    - jbj: refactor rpmio.h include out of header files.
    - jbj: patch macro seems sufficiently functional, delete the old "stuff".
    - jbj: add stub vectors for rpmio I/O API.
    - jbj: drop support for internal lua.
    - jbj: add (preliminary) WR configuration.
    - rse: support building against external stock Lua 5.1.2, too
    - rse: upgraded the local Lua copy from version 5.0.2 to 5.1.2
    - jbj: remove network transport from all rpm libraries.
    - jbj: don't close stdout by mistake (OpenSuSE).
    - jbj: run checkfiles even if failure is imminent (OpenSuSE).
    - jbj: rip compiled in %patch, breaking remote patch fetching.
    - jbj: fixup %patchNN rewrite.
    - jbj: add osgi automagic dependency extractors <klee@redhat.com>.
    - jbj: debugedit warning removal <pmatlai@redhat.com>.
    - jbj: free 5 bits in FCOLOR_e for future use. 