@@ -531,6 +531,7 @@
             --without-db-rpc \
             --without-db-largefile \
             --with-db-mutex="UNIX/fcntl" \
+            --without-pthreads \
             --without-libelf \
             --without-selinux \
             --without-perl \
