@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rse: allow building without POSIX pthreads (explicitly through --without-pthreads or if platform doesn't support it)
     - rse: provide "install-sh" script in %{_rpmhome} as a companion to "mkinstalldirs"
     - rse: fix %{__mkdir_p} macro fallback value by installing missing "mkinstalldirs" into %{_rpmhome}
     - rse: consistently use %{__mkdir_p} macro instead of its pre-defined value @MKDIR_P@ to allow overriding
